fix base and version logging

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="/expedition/"/>
+    <base href="/people/"/>
     <title>People</title>
 
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="/assets/npdc-common-master-latest.css" rel="stylesheet">
 
-    <script>var VERSION = '<!-- @echo VERSION -->'; console.log("npdc-expedition version:", VERSION)</script>
+    <script>var VERSION = '<!-- @echo VERSION -->'; console.log("npdc-people version:", VERSION)</script>
 
   </head>
   <body>
