small syntax fix

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <title>People</title>
 
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="/assets/npdc-common-master-latest.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="/assets/npdc-common-master-latest.css" rel="stylesheet" />
 
     <script>var VERSION = '<!-- @echo VERSION -->'; console.log("npdc-people version:", VERSION)</script>
 
