--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,16 @@
     <title>People</title>
 
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link href="/assets/npdc-common-master-latest.css" rel="stylesheet" />
+    <link href="/assets/npdc-common-<!-- @echo COMMON_VERSION -->.css" rel="stylesheet" />
 
     <script>var VERSION = '<!-- @echo VERSION -->'; console.log("npdc-people version:", VERSION)</script>
 
   </head>
   <body>
     <npdc:app></npdc:app>
+    <!-- @if PROD -->
+    <script src="/assets/npdc-common-<!-- @echo COMMON_VERSION -->.js"></script>
+    <!-- @endif -->
     <script src="app.js"></script>
   </body>
 </html>
