--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="/people/"/>
+    <base href="/person/"/>
     <title>People</title>
 
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
