--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="npdcPeopleApp" ng-cloak ng-strict-di>
+<html lang="en" ng-app="npdcPersonApp" ng-cloak ng-strict-di>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/person/"/>
-    <title>People</title>
+    <title>Person</title>
 
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link href="/assets/npdc-common-<!-- @echo COMMON_VERSION -->.css" rel="stylesheet" />
 
-    <script>var VERSION = '<!-- @echo VERSION -->'; console.log("npdc-people version:", VERSION)</script>
+    <script>var VERSION = '<!-- @echo VERSION -->'; console.log("npdc-person version:", VERSION)</script>
 
   </head>
   <body>
