--- a/src/show/show.html
+++ b/src/show/show.html
@@ -66,7 +66,9 @@
           <th>Left</th>
           <td>{{ document.left }}</td>
         </tr>
-
+        <tr>
+	  <th>CRISTIN id</th>
+	  <td>{{ document.cristin_id }}</td>
         <tr>
           <th>Comment</th>
           <td>{{ document.comment  }}</td>
